Refactored day8, added comments and updated readme